Fixed overflow issue and added README file

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ h1
 
 #display
 {
+    overflow: hidden;
     font-size: xx-large;
     font-style: italic;
     box-shadow: 0px 3px 5px 1px black, 0px -3px 5px 1px black, 3px 0px 5px 1px black, -3px 0px 5px 1px black;
